--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ RSTUDIO_CONTAINER_NAME=rplatform_rstudio
 RSTUDIO_PORT=8787
 LISTEN_PORT=8787
 RSTUDIO_VOLUME_MOUNT_POINT=/mnt/vol
-IMAGE_FULLNAME=test-registry.rplatform.org:5000/demo:0.0.1
+IMAGE_FULLNAME=test-registry.rplatform.org:5000/demo12:0.0.1
